--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ author-image:   player128.png
 author-job:     wxplayer
 author-email:   wxplayer@gmail.com # Add your email for contant form.
 author-twitter: wxplayer # Add your twitter account
-about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.
-[下载](https://wwa.lanzous.com/i5NSQlt28je)
+about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.可以浏览开源m3u8影视采集网站和影视网站，[下载](https://wwa.lanzous.com/i5NSQlt28je)
 
 # Social settings
 social-twitter:   artemsheludko_
