--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ author-image:   player128.png
 author-job:     wxplayer
 author-down:   https://wwa.lanzous.com/i5NSQlt28je # Add your email for contant form.
 author-twitter:  # Add your twitter account
-about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.可以浏览开源m3u8影视采集网站和影视网站.
+about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.
+about-author2:  可以浏览开源m3u8影视采集网站和影视网站.
 
 # Social settings
 social-twitter:   artemsheludko_
