--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. ht
 author-name:    无限播放APP
 author-image:   player128.png
 author-job:     wxplayer
-author-down:   https://wwa.lanzous.com/iYUzTn5iv8f # Add your email for contant form.
+author-down:   https://wwa.lanzous.com/i8Y43n5m0yj # Add your email for contant form.
 author-twitter:  # Add your twitter account
 about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.
 about-author2:  可以浏览开源m3u8影视采集网站和影视网站.
