--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author-down:   http://48y.cn/update/wxplayer.apk # Add your email for contant fo
 author-down-two:   https://wwa.lanzous.com/iH8ajnfc5oj # Add your email for contant form.
 author-twitter:  # Add your twitter account
 about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.
-about-author2:  可以浏览开源m3u8影视采集网站和影视网站.
+about-author2:  可以浏览开源m3u8影视网站.
 
 # Social settings
 social-twitter:   artemsheludko_
