--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author-name:    无限播放APP
 author-image:   player128.png
 author-job:     wxplayer
 author-down:   http://48y.cn/update/wxplayer.apk # Add your email for contant form.
-author-down-two:   https://wwa.lanzous.com/iH8ajnfc5oj # Add your email for contant form.
+author-down-two:   https://wwi.lanzouo.com/iH8ajnfc5o # Add your email for contant form.
 author-twitter:  # Add your twitter account
 about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.
 about-author2:  可以浏览开源m3u8影视网站.
