--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. ht
 author-name:    无限播放APP
 author-image:   player128.png
 author-job:     wxplayer
-author-down:   https://api.hanximeng.com/lanzou/?url=https://wwi.lanzoup.com/iudlK0gqs39i&type=down #http://48y.cn/update/wxplayer.apk # Add your email for contant form.
-author-down-two:   https://wwi.lanzoup.com/iudlK0gqs39i # Add your email for contant form.
+author-down:   https://api.hanximeng.com/lanzou/?url=https://wwi.lanzoup.com/icHyW0h394uj&type=down #http://48y.cn/update/wxplayer.apk # Add your email for contant form.
+author-down-two:   https://wwi.lanzoup.com/icHyW0h394uj # Add your email for contant form.
 author-twitter:  # Add your twitter account
 about-author:   可以播放m3u8,m3u,dpl,flv等视频文件.
 about-author2:  可以浏览开源m3u8影视网站.
